<resources>
    <string name="app_name">TrapprKeepr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Java Group Project</string>
    <string name="nav_header_subtitle">TrapprKeepr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_note_list">Keepr</string>
    <string name="menu_compose">Create Note</string>
    <string name="save">Save Note</string>
    <string name="add_field">Add Section</string>
    <string name="note_title">Note Title</string>
    <string name="compose_note">Compose Note</string>
    <string name="note_list_category_selector">TextView</string>
    <string name="main_app">Trappr Keepr Main Instance</string>
    <string name="title_activity_create_note">CreateNoteActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>