<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cupojava.trapprkeepr.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_note_list"
        android:name="com.cupojava.trapprkeepr.ui.note_list.NoteListFragment"
        android:label="@string/menu_note_list"
        tools:layout="@layout/fragment_note_list" />

    <fragment
        android:id="@+id/nav_compose_note"
        android:name="com.cupojava.trapprkeepr.ui.note.ComposeNoteFragment"
        android:label="@string/menu_compose"
        tools:layout="@layout/fragment_compose_note" />
</navigation>