<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.note.ComposeNoteFragment">

    <Spinner
        android:id="@+id/note_category_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/menu_note_list"
        android:background="@color/white"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_title"
        android:inputType="textMultiLine"
        android:labelFor="@id/note_content"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/note_category_selector"
        app:layout_constraintStart_toStartOf="@+id/note_category_selector"
        app:layout_constraintTop_toBottomOf="@+id/note_category_selector" />

    <EditText
        android:id="@+id/note_content"
        android:layout_width="299dp"
        android:layout_height="531dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/compose_note"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/note_category_selector"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/note_category_selector"
        app:layout_constraintTop_toBottomOf="@+id/note_title" />

    <Button
        android:id="@+id/add_field_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:text="@string/add_field"
        app:barrierMargin="@dimen/container_margin"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintStart_toStartOf="@+id/note_content"
        app:layout_constraintTop_toBottomOf="@+id/note_content" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/note_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/add_field_button"
        app:layout_constraintTop_toBottomOf="@+id/note_content" />

</androidx.constraintlayout.widget.ConstraintLayout>